# dsd-aws-sam

./: .gitignore  .pylintrc  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
dsd_aws_lambda/: cli.py  deploy.py  deploy_messages.py  platform_deployer.py  plugin_config.py
dsd_aws_lambda/templates/: lambda_handler.py  samconfig.toml  settings.py  template.yaml  template_with_rds.yaml
dsd_aws_sam/: __init__.py  cli.py  deploy.py  deploy_messages.py  platform_deployer.py  plugin_config.py
dsd_aws_sam/templates/: aws_sam_settings.py  github_actions_deploy.yml  lambda_handler.py  samconfig.toml  settings.py  template.yaml  template_with_rds.yaml
tests/: conftest.py
tests/e2e_tests/: test_deployment.py  utils.py
tests/integration_tests/: conftest.py  test_aws_lambda_config.py  test_aws_sam_config.py  test_cli_args.py  test_help_output.py  test_settings_sidecar.py
tests/integration_tests/reference_files/: Dockerfile  Pipfile  aws_sam_settings.py  pipenv.dockerfile  plugin_help_text.txt  poetry.dockerfile  pyproject.toml  requirements.txt  settings.py
tests/integration_tests/utils/: it_helper_functions.py  manage_sample_project.py
tests/unit_tests/: conftest.py  test_deploy_messages.py  test_platform_deployer.py  test_validate_stack_name.py
