[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dsd-aws-sam"
version = "0.1.0"
description = "A plugin for django-simple-deploy, supporting deployments using AWS SAM."
readme = "README.md"

authors = [
    {name = "James Alexander"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

keywords = ["django", "deployment", "aws", "lambda", "serverless"]

requires-python = ">=3.10"

dependencies = [
    "django~=4.2",
    "pluggy~=1.5.0",
    "toml~=0.10.2",
    "django-simple-deploy~=1.4.0",
    "mangum~=0.21.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "build>=1.2.1",
    "pytest>=8.3.0",
    "twine>=5.1.1",
]

[project.urls]
"Documentation" = "https://github.com/django-simple-deploy/dsd-aws-sam"
"GitHub" = "https://github.com/django-simple-deploy/dsd-aws-sam"
"Changelog" = "https://github.com/django-simple-deploy/dsd-aws-sam/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
    "dsd_aws_sam",
    "dsd_aws_sam.templates",
]
include-package-data = true
